# book_mart_fastapi

./: pyproject.toml
migration/: env.py
migration/versions/: efdd0dd9e0af_init.py
src/: __init__.py  config.py
src/auth/: models.py
src/books/: models.py  routes.py  schemas.py  service.py
src/db/: main.py
