[tool.poetry]
name = "practice"
version = "0.1.0"
description = ""
authors = ["MuhammadHammadBashir0315 <hammad.bashir0315@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["standard"], version = "^0.115.6"}
uvicorn = "^0.32.1"
asyncpg = "^0.30.0"
pydantic-settings = "^2.6.1"
sqlmodel = "^0.0.22"
alembic = "^1.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
